--------------------------------------------------------------------------------
Changes for 2.3.0

New features:
...G...... [ZBX-7742] added error message upon encountering trailing data for zabbix_sender when reading from file (Juris)
A.F.I...S. [ZBXNEXT-581] implemented the ability to filter by multiple LLD macros (Pavels, wiper)
..F....... [ZBX-7361] implemented alphabetic host ordering when trigger has many hosts (Ivo)
..F....... [ZBXNEXT-1632] added goto graphs link in host menu popup (Eduard)
..F....... [ZBXNEXT-1735] removed graph and history link from items in lates data page, if history and trends are disabled (Oleg)
..F....... [ZBXNEXT-1910] added active since and active till columns in maintenance page (Eduard)
..F....... [ZBX-7095] added 'Cancel' button in dashboard configuration (Ivo)
..F....... [ZBXNEXT-2140] enabled Monitoring -> Latest data filter option "Show items without data" by default (Richlv)
..F....... [ZBX-7713] changed the event details page to display all hosts used in a trigger (Ivo)
........S. [ZBXNEXT-1700] added informative messages about database connection restoration (Juris)
..F....... [ZBX-7609] improved frontend messages mute/unmute (Eduard)
..F....... [ZBXNEXT-1291] added clickable links for template names in host, template, host prototype and discovered host property templates tab (Oleg)
..F....... [ZBXNEXT-2073] improved dashboard refresh time menu (Eduard)
..F....... [ZBXNEXT-2073] improved dashboard favourite menu (Eduard)
..F....... [ZBXNEXT-2073] improved service configuration menu (Eduard)
..F....... [ZBXNEXT-2073] improved slide show refresh multiplier popup menu (Eduard)
..F....... [ZBXNEXT-2073] improved trigger log menu (Eduard)
..F....... [ZBXNEXT-2073] improved trigger macros menu (Eduard)
..F....... [ZBXNEXT-2073] updated jQuery to latest 1.10.2 (Eduard)
...G...PS. [ZBXNEXT-453] added a new parameter 'User' to daemon configuration that allows dropping privileges to the specified user (Juris)