@@ -2,6 +2,7 @@
 Changes for 2.3.0
 
 New features:
+..F....... [ZBXNEXT-1533] added "Action name" in Audit->Action log (Oleg)
 ...G...... [ZBX-7742] added error message upon encountering trailing data for zabbix_sender when reading from file (Juris)
 A.F.I...S. [ZBXNEXT-581] implemented the ability to filter by multiple LLD macros (Pavels, wiper)
 ..F....... [ZBX-7361] implemented alphabetic host ordering when trigger has many hosts (Ivo)
